<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

    <android.support.v4.view.ViewPager
        android:id="@+id/slide_view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/dotsLayout"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="0dp"
        android:background="@android:color/transparent"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="0dp">

    </android.support.v4.view.ViewPager>

    <LinearLayout
        android:id="@+id/dotsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="0dp"
        android:orientation="horizontal"
        android:padding="5dp">

    </LinearLayout>

    <Button
        android:id="@+id/skip_button"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="8dp"
        android:background="?android:attr/selectableItemBackground"
        android:text="Skip >"
        android:textStyle="bold" />


</RelativeLayout>